add model_class and greatly improve W40K.Core.Chart

--- a/w40k.cabal
+++ b/w40k.cabal
@@ -36,7 +36,7 @@ library
                        vector, vector-algorithms,
                        MemoTrie,
                        math-functions,
-                       transformers, mtl, lens,
+                       transformers, mtl, lens, constraints, reflection,
                        diagrams-lib, diagrams-svg, Chart, Chart-diagrams
   default-language:    Haskell2010
   ghc-options:         -O3
