start work on admech and split imperial knights into their own file

--- a/w40k.cabal
+++ b/w40k.cabal
@@ -23,11 +23,13 @@ library
                        W40K.Core.Mechanics.Ranged,
                        W40K.Core.Psychic,
                        W40K.Core.Score,
+                       W40K.Data.AdMech,
                        W40K.Data.Assassins,
-                       W40K.Data.Common,
                        W40K.Data.Chaos,
-                       W40K.Data.GreyKnights,
+                       W40K.Data.Common,
                        W40K.Data.Eldar,
+                       W40K.Data.GreyKnights,
+                       W40K.Data.ImperialKnights,
                        W40K.Data.Marines,
                        W40K.Data.Necrons,
                        W40K.Data.Tau,
