--- a/w40k.cabal
+++ b/w40k.cabal
@@ -32,6 +32,7 @@ library
                        W40K.Data.ImperialKnights,
                        W40K.Data.Marines,
                        W40K.Data.Necrons,
+                       W40K.Data.Orks,
                        W40K.Data.Tau,
                        W40K.Data.ThousandSons,
                        W40K.Data.Tyranids
