--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,8 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-9.1
+resolver: lts-12.20
+allow-newer: true
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -39,7 +40,10 @@ packages:
 - .
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+    - Chart-1.9
+    - Chart-diagrams-1.9
+    - SVGFonts-1.6.0.3
 
 # Override default flag values for local packages and extra-deps
 flags: {}
