--- a/w40k.cabal
+++ b/w40k.cabal
@@ -29,9 +29,11 @@ library
                        W40K.Data.Assassins,
                        W40K.Data.Chaos,
                        W40K.Data.Common,
+                       W40K.Data.DeathGuard,
                        W40K.Data.Eldar,
                        W40K.Data.GreyKnights,
                        W40K.Data.ImperialKnights,
+                       W40K.Data.Inquisition,
                        W40K.Data.Marines,
                        W40K.Data.Necrons,
                        W40K.Data.Orks,
