--- a/stack.yaml
+++ b/stack.yaml
@@ -16,7 +16,7 @@
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
 resolver: lts-12.20
-allow-newer: true
+# allow-newer: true
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -44,6 +44,7 @@ extra-deps:
     - Chart-1.9
     - Chart-diagrams-1.9
     - SVGFonts-1.6.0.3
+    - inline-r-0.9.2
 
 # Override default flag values for local packages and extra-deps
 flags: {}
