--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-12.20
+resolver: lts-14.27
 # allow-newer: true
 
 # User packages to be built.
@@ -40,11 +40,7 @@ packages:
 - .
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps:
-    - Chart-1.9
-    - Chart-diagrams-1.9
-    - SVGFonts-1.6.0.3
-    - inline-r-0.9.2
+extra-deps: []
 
 # Override default flag values for local packages and extra-deps
 flags: {}
