--- a/w40k.cabal
+++ b/w40k.cabal
@@ -67,7 +67,7 @@ library
     exposed-modules:   W40K.Core.Chart.R
 
   default-language:    Haskell2010
-  ghc-options:         -O3
+  ghc-options:         -O3 -Wall -Wno-name-shadowing
 
 executable w40k
   hs-source-dirs:      cli
